--- a/ProjectMeals.html
+++ b/ProjectMeals.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,25 +8,31 @@
     <title>Meals</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-<style>
-    img{
-        height: 300px;
-        border-radius: 5px;
-    }
-    p{
-        font-weight: bold;
-    }
-    footer{
-        background-color: grey;
-        color:white;
-        padding: 20px;
-        ma
-    }
-</style>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
+    <style>
+        img {
+            height: 300px;
+            border-radius: 5px;
+        }
+
+        p {
+            font-weight: bold;
+        }
+
+        footer {
+            background-color: grey;
+            color: white;
+            padding: 20px;
+            ma
+        }
+    </style>
 </head>
+
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
@@ -51,27 +58,31 @@
     </nav>
     <section class="container">
         <div class="row mt-5" id="meals"></div>
-        
+
     </section>
-    <footer class="text-center mt-5"><p>Designed by and developed</p><p>Aadhya Madupathi</p></footer>
+    <footer class="text-center mt-5">
+        <p>Designed by and developed</p>
+        <p>Aadhya Madupathi</p>
+    </footer>
 </body>
+
 </html>
 <script>
     $.ajax({
-        url:"https://www.themealdb.com/api/json/v1/1/filter.php?a=Canadian",
-        type:"get",
-        dataType:"json",
-        success:function(response){
+        url: "https://www.themealdb.com/api/json/v1/1/filter.php?a=Canadian",
+        type: "get",
+        dataType: "json",
+        success: function (response) {
             console.log(response);
-           for (let meal of response.meals) {
-                    var newMeal="<div class='col-md-4 text-center'><p>"+ meal.strMeal+"<p> <img src="+ meal.strMealThumb+"> </div>";
-                     $('#meals').append(newMeal);
+            for (let meal of response.meals) {
+                var newMeal = "<div class='col-md-4 text-center'><p>" + meal.strMeal + "<p> <img src=" + meal.strMealThumb + "> </div>";
+                $('#meals').append(newMeal);
             }
         },
-        error:function(error){
-             console.log(error);
+        error: function (error) {
+            console.log(error);
         },
-        always:function(){}
+        always: function () { }
 
-    })
+    });
 </script>
